--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,29 +12,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/header"
         android:layout_alignParentTop = "true"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:elevation="3dp"
         >
         <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/ballerz_meet"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_marginRight="20dp"
             android:onClick="handleImageClicked"/>
 
         <TextView
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ballerz Meet"
-            android:gravity="center"
-            android:textSize="30sp"
-            android:layout_centerHorizontal="true"
+            android:textSize="25sp"
             android:id="@+id/ballerz"
-            android:layout_gravity="center"
-            android:layout_marginBottom="5dp"
             android:textStyle="bold"/>
     </LinearLayout>
 
@@ -43,17 +39,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_gravity="center">
+        android:layout_below="@+id/header"
+        >
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
-        android:background="#6099FF">
+        android:background="#6099FF"
+        android:elevation="3dp">
         <LinearLayout
             android:layout_width="90dp"
             android:layout_height="wrap_content"
@@ -68,13 +65,7 @@
                 android:background="#6099FF"
                 android:src="@drawable/ic_home"
                 android:scaleType="fitCenter"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home"
-                android:textStyle="bold"
-                android:textColor="#333333"
-                android:layout_marginBottom="5dp"/>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="90dp"
@@ -90,13 +81,6 @@
                 android:background="#6099FF"
                 android:src="@drawable/ic_search"
                 android:scaleType="fitCenter"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Search"
-                android:textStyle="bold"
-                android:textColor="#333333"
-                android:layout_marginBottom="5dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="90dp"
@@ -112,13 +96,6 @@
                 android:background="#6099FF"
                 android:src="@drawable/ic_plus"
                 android:scaleType="fitCenter"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Create"
-                android:textStyle="bold"
-                android:textColor="#333333"
-                android:layout_marginBottom="5dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="90dp"
@@ -134,16 +111,9 @@
                 android:background="#6099FF"
                 android:src="@drawable/ic_profile"
                 android:scaleType="fitCenter"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile"
-                android:textStyle="bold"
-                android:textColor="#333333"
-                android:layout_marginBottom="5dp"/>
         </LinearLayout>
 
 
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
