--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
         android:layout_marginBottom="60dp"
-        android:layout_marginTop="140dp">
+        android:layout_marginTop="@dimen/activity_vertical_margin">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -33,7 +33,7 @@
                 <FrameLayout
                     android:id="@+id/container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="300dp"
                     android:background="@android:color/transparent" />
                 <TextView
                     android:paddingLeft="10dp"
@@ -43,7 +43,7 @@
                     android:layout_marginBottom="20dp"/>
                 <CalendarView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/calendarView" />
                 <TextView
                     android:paddingLeft="10dp"
