--- a/app/src/main/res/layout/fragment_find_game.xml
+++ b/app/src/main/res/layout/fragment_find_game.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
         android:layout_marginBottom="60dp"
-        android:layout_marginTop="140dp">
+        android:layout_marginTop="@dimen/activity_vertical_margin">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
