--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
         android:layout_marginBottom="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:padding="0dp"
         android:orientation="vertical">
         <LinearLayout
