--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/header"
         android:layout_alignParentTop = "true"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center"
         android:elevation="3dp"
         >
@@ -22,8 +22,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ballerz_meet"
-            android:layout_marginRight="20dp"
-            android:onClick="handleImageClicked"/>
+            android:onClick="handleImageClicked"
+            android:layout_marginBottom="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
