--- a/app/src/main/res/layout/fragment_find_game.xml
+++ b/app/src/main/res/layout/fragment_find_game.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
+        android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
